add: box-sizing

--- a/index.html
+++ b/index.html
@@ -9,6 +9,14 @@
 </head>
 
 <body>
+  <div class="page-wrapper">
+    <header class="heasder">
+      <span class="hello">Привет 🤚</span>
+      <p class="hello-text">Делаю сайты на заказ: 
+        <br>дизай, код, продвижение</p>
+    </header>
+  </div>
+  <!-- /.page-wrapper -->
   <script src="js/main.js"></script>
 </body>
 
