--- a/index.html
+++ b/index.html
@@ -1,23 +1,26 @@
 <!DOCTYPE html>
 <html lang="ru">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="css/normalize.css">
-  <link rel="stylesheet" href="css/style.css">
-  <title>Слесарева Виктория</title>
-</head>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500&display=swap" rel="stylesheet" />
+    <link rel="stylesheet" href="css/normalize.css" />
+    <link rel="stylesheet" href="css/style.css" />
+    <title>Слесарева Виктория</title>
+  </head>
 
-<body>
-  <div class="page-wrapper">
-    <header class="heasder">
-      <span class="hello">Привет 🤚</span>
-      <p class="hello-text">Делаю сайты на заказ: 
-        <br>дизай, код, продвижение</p>
-    </header>
-  </div>
-  <!-- /.page-wrapper -->
-  <script src="js/main.js"></script>
-</body>
-
+  <body>
+    <div class="page-wrapper">
+      <header class="header">
+        <span class="hello">Привет 🤚</span>
+        <p class="hello-text">
+          Делаю сайты на заказ: <br />дизайн, код, продвижение
+        </p>
+      </header>
+    </div>
+    <!-- /.page-wrapper -->
+    <script src="js/main.js"></script>
+  </body>
 </html>
