--- a/index.html
+++ b/index.html
@@ -5,7 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500&display=swap" rel="stylesheet" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="css/normalize.css" />
     <link rel="stylesheet" href="css/style.css" />
     <title>Слесарева Виктория</title>
@@ -19,6 +22,21 @@
           Делаю сайты на заказ: <br />дизайн, код, продвижение
         </p>
       </header>
+      <div class="container">
+        <div class="user">
+          <img
+            width="82px"
+            height="82px"
+            src="img/avatar.jpg"
+            alt="Слесарева Виктория"
+            class="user-avatar"
+          />
+          <h1 class="user-name">Слесарева Виктория</h1>
+          <p class="user-description">Разработчик сайтов</p>
+        </div>
+        <!-- /.user -->
+      </div>
+      <!-- /.container -->
     </div>
     <!-- /.page-wrapper -->
     <script src="js/main.js"></script>
