--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="css/normalize.css" />
     <link rel="stylesheet" href="css/style.css" />
     <title>Слесарева Виктория</title>
+    <base target="_blank">
   </head>
 
   <body>
@@ -35,6 +36,32 @@
           <p class="user-description">Разработчик сайтов</p>
         </div>
         <!-- /.user -->
+        <div class="card">
+          <div class="buttons">
+            <a href="https://t.me/LanevskyV" class="button tg">
+              <img src="img/icons/telegram.svg" alt="" class="button-icon" />
+            </a>
+            <a
+              href="https://www.youtube.com/channel/UCWIrO_u_DRw0iVz-2ra8ojg"
+              class="button yt"
+            >
+              <img src="img/icons/youtube.svg" alt="" class="button-icon" />
+            </a>
+            <a href="https://vk.com/id586763945" class="button vk">
+              <img src="img/icons/vk.svg" alt="" class="button-icon" />
+            </a>
+          </div>
+          <!-- /.buttons -->
+          <a href="https://github.com/slesareva-vicky?tab=repositories" class="button gh">
+            <img src="img/icons/github.svg" alt="" class="button-icon" />
+            <span class="button-text"> Профиль GitHub</span>
+          </a>
+          <a href="https://lugansk.hh.ru/applicant/resumes/view?resume=5a57f81cff0c6b38330039ed1f68763742356d" class="button hh">
+            <img src="img/icons/hh.svg" alt="" class="button-icon" />
+            <span class="button-text"> Резюме</span>
+          </a>
+        </div>
+        <!-- /.card -->
       </div>
       <!-- /.container -->
     </div>
